--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -4,7 +4,9 @@
 .input_id_phone, .input_id_city, .input_id_image, .input_idphone, .input_id_bio {
 	display: none;
 }
-
+.blue {
+	background: #2db2ea!important;
+}
 h5 {
 	line-height: 34px;
 }
@@ -146,4 +148,38 @@ li.dropdown ul li ul {
 }
 .product-author section h3:hover {
 	color: #3acf87;
+}
+
+
+.onoffswitch {
+    position: relative; width: 58px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none!important;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    height: 30px; padding: 0; line-height: 30px;
+    border: 2px solid #999999; border-radius: 30px;
+    background-color: #EEEEEE;
+    transition: background-color 0.3s ease-in;
+}
+.onoffswitch-label:before {
+    content: "";
+    display: block; width: 30px; margin: 0px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 26px;
+    border: 2px solid #999999; border-radius: 30px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label {
+    background-color: #2EE8A7;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
+   border-color: #2EE8A7;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label:before {
+    right: 0px; 
 }
