--- a/theme/templates/admin/base.html
+++ b/theme/templates/admin/base.html
@@ -167,6 +167,8 @@
 	<script src="{% static 'admin/plugins/bootbox/bootbox.js' %}"></script> 	<!-- Bootbox -->
 	<script src="{% static 'admin/demo/demo.js' %}"></script>
 	<script src="{% static 'admin/demo/demo-switcher.js' %}"></script>
+	<script src="{% static 'admin/plugins/form-inputmask/jquery.inputmask.bundle.min.js' %}"></script>  	<!-- Input Masks Plugin -->
+	<script src="{% static 'admin/demo/demo-mask.js' %}"></script>
 	<!-- End loading page level scripts-->
 {% endblock %}
 
