--- a/theme/templates/admin/shop/product/change_form.html
+++ b/theme/templates/admin/shop/product/change_form.html
@@ -6,7 +6,7 @@
 
 <p class="help variations-help">
 <br>
-Выберите все необходимые варианты и нажмите "Сохранить и продолжить редактирование". После чего вы сможете изменить цену для каждого товара отдельно.
+Раскройте панель, выберите все необходимые варианты и нажмите "Сохранить и продолжить редактирование". После чего вы сможете изменить цену для каждого товара отдельно.
 </p>
 {% endif %}
 {% endblock %}
