--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -18,7 +18,7 @@
 			<ul class="option-set" data-option-key="filter">
 			<li><a href="#filter" class="selected" data-filter="*">Все</a></li>
 			{% for category in child_categories %}
-				<li><a href="#filter" data-filter=".{{category.title|hard_trim}}">{{category.title|title|truncatechars:25 }}</a></li>
+				<li><a href="#filter" data-filter=".{{category.title|hard_trim}}">{{category.title|title}}</a></li>
 			{% endfor %}
 			</ul>
 		</div>
@@ -63,7 +63,7 @@
 							{{ category.parent.parent.title }}
 						{% endif %}
 						{{ category.parent.title }}</span>
-						<h5>{{ category.title }}</h5>
+						<h5>{{ category.title|truncatechars:25 }}</h5>
 					</section>
 				</a>
 
