--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -13,13 +13,17 @@
 		<div class="tp-banner">
 			<ul>
 			{% for image in images %}
-				<li data-transition="fade" data-slotamount="7" data-masterspeed="1000">
-
-					<img src="{{ MEDIA_URL }}{% thumbnail image.featured_image 1200 500 %}" alt="" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">	 
-					<div class="caption dark sfb fadeout" data-x="750" data-y="170" data-speed="400" data-start="800"  data-easing="Power4.easeOut">
-						{{ image.short_description|safe }}
-						<a href="{{image.href }}" class="caption-btn">Подробнее</a>
-					</div>
+				<li data-transition="fade" data-slotamount="7" data-masterspeed="1500">
+				<img src="{{ MEDIA_URL }}{% thumbnail image.featured_image 1200 500 %}" alt="" data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">	 
+				<div class="caption dark fade fadeout" 
+				data-x="right"
+				data-y="center"
+				data-hoffset="-150"
+				data-voffset="100" 
+				data-speed="400" data-start="800"  data-easing="Power1.easeOut">
+				{{ image.short_description|safe }}
+				<a href="{{image.href }}" class="caption-btn">Подробнее</a>
+				</div>
 				</li>
 			{% endfor %}
 			</ul>
@@ -30,54 +34,43 @@
 {% endblock %}
 
 {% block featured %}
-<div class="container" >
-
-	<div class="one-third column">
-		<a href="#" class="img-caption" >
-			<figure>
-				<img src="{% static 'images/featured_img_1.jpg' %}" alt="" />
-				<figcaption>
-					<h3>Men's Shirts</h3>
-					<span>25% Off Summer Styles</span>
-				</figcaption>
-			</figure>
-		</a>
-	</div>
-
-	<div class="one-third column">
-		<a href="#" class="img-caption" >
-			<figure>
-				<img src="{% static 'images/featured_img_2.jpg' %}" alt="" />
-				<figcaption>
-					<h3>Running Shoes</h3>
-					<span>Sports Discount</span>
-				</figcaption>
-			</figure>
-		</a>
-	</div>
-
-	<div class="one-third column">
-		<a href="#" class="img-caption" >
-			<figure>
-				<img src="{% static 'images/featured_img_3.jpg' %}" alt="" />
-				<figcaption>
-					<h3>Winter Jackets</h3>
-					<span>End-of Season Sales</span>
-				</figcaption>
-			</figure>
-		</a>
-	</div>
-
+<div class="container">
+{% for category in featured %}
+    <div class="four columns">
+        <a href="{{ category.get_absolute_url }}" class="img-caption" >
+            <figure>
+                {% if settings.SHOP_CATEGORY_USE_FEATURED_IMAGE %}
+                        {% if category.featured_image %}
+                            <img alt="" src="{{ MEDIA_URL }}{% thumbnail category.featured_image 380 380 %}"/>
+                        {% else %}
+                            {% with "23456"|make_list|random as rnd %}
+                            {% with 'images/product_category_0'|add:rnd|add:'.jpg' as img_path %}
+                                <img src="{{ STATIC_URL }}{% thumbnail img_path 380 380 %}" alt="" class="width-100">
+                            {% endwith %}
+                            {% endwith %}
+                        {% endif %}
+                    {% else %}
+                        <img src="{{ STATIC_URL }}{% thumbnail 'images/titlebar_bg_01.jpg' 380 380 %}" alt="" class="width-100">
+                    {% endif %}
+                <figcaption>
+                    <h3>{{ category.title|truncatechars:25 }}</h3>
+                    <span>{{ category.parent.title }}</span>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+{% endfor %}
 </div>
 <div class="clearfix"></div>
 {% endblock %}
 
 {% block new_arrivals %}
+{% if new_arrivals %}
 <div class="container">
 
     <!-- Headline -->
     <div class="sixteen columns">
-        <h3 class="headline">New Arrivals</h3>
+        <h3 class="headline">Новые поступления</h3>
         <span class="line margin-bottom-0"></span>
     </div>
 
@@ -94,153 +87,53 @@
         <!-- Products -->
         <div class="showbiz" data-left="#showbiz_left_1" data-right="#showbiz_right_1" data-play="#showbiz_play_1" >
             <div class="overflowholder">
-
                 <ul>
-
-                    <!-- Product #1 -->
+                    {% for product in new_arrivals %}
                     <li>
                         <figure class="product">
-                            <div class="mediaholder">
-                                <a href="variable-product-page.html">
-                                    <img alt="" src="{% static 'images/shop_item_01.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt="" src="{% static 'images/shop_item_01_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="variable-product-page.html">
-                                <section>
-                                    <span class="product-category">Skirts</span>
-                                    <h5>Brown Mini Skirt</h5>
-                                    <span class="product-price">$79.00</span>
-                                </section>
-                            </a>
-                        </figure>
+                {% if product.on_custom_sale %}
+                    <div class="product-discount">СКИДКА</div>
+                {% endif %}
+                {% if product.pre_order %}
+                    <div class="product-discount blue">Под заказ</div>
+                {% endif %}
+                <div class="mediaholder">
+                <a href="{{ product.get_absolute_url }}">
+                    {% if product.image %}
+                    <img alt="" src="{{ MEDIA_URL }}{% thumbnail product.image 250 330 %}">
+                    <div class="cover">
+                        <img alt="" src="{{ MEDIA_URL }}{% thumbnail product.image 300 380 %}">
+                    </div>
+                    {% else %}
+                    <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}">
+                    <div class="cover">
+                        <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 300 380 %}">
+                    </div>
+                    {% endif %}
+                </a>
+                <a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
+                </div>
+                <a href="{{ product.get_absolute_url }}">
+                    <section>
+                        <h5>{{ product.title|title }}</h5>
+                        <span class="product-category">
+                        {% if product.material %}
+                            {{ product.material|truncatechars:22 }}
+                        {% else %}
+                            <br>
+                        {% endif %}
+                        </span>
+                        {% if product.on_custom_sale %}
+                            <span class="product-price-discount">{{ product.unit_price|rub_currency }}<i>{{ product.price|rub_currency }}</i></span>
+                        {% else %}
+                        <span class="product-price">{{ product.price|rub_currency }}</span>
+                        {% endif %}
+                    </section>
+                </a>
+            </figure>
                     </li>
-
-
-                    <!-- Product #2 -->
-                    <li>
-                        <figure class="product">
-                            <div class="mediaholder">
-                                <a href="variable-product-page.html">
-                                    <img alt=""  src="{% static 'images/shop_item_02.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt=""  src="{% static 'images/shop_item_02_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="variable-product-page.html">
-                                <section>
-                                    <span class="product-category">Shoes</span>
-                                    <h5>Glory High Shoes</h5>
-                                    <span class="product-price">$99.00</span>
-                                </section>
-                            </a>
-                        </figure>
-                    </li>
-
-
-                    <!-- Product #3 -->
-                    <li>
-                        <figure class="product">
-                            <div class="product-discount">SALE</div>
-                            <div class="mediaholder">
-                                <a href="single-product-page.html">
-                                    <img alt=""  src="{% static 'images/shop_item_03.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt=""  src="{% static 'images/shop_item_03_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="single-product-page.html">
-                                <section>
-                                    <span class="product-category">Suits</span>
-                                    <h5>Wool Two-Piece Suit</h5>
-                                    <span class="product-price-discount">$499.00<i>$399.00</i></span>
-                                </section>
-                            </a>
-                        </figure>
-                    </li>
-
-
-                    <!-- Product #4 -->
-                    <li>
-                        <figure class="product">
-                            <div class="mediaholder">
-                                <a href="variable-product-page.html">
-                                    <img alt="" src="{% static 'images/shop_item_04.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt="" src="{% static 'images/shop_item_04_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="variable-product-page.html">
-                                <section>
-                                    <span class="product-category">Longsleeves</span>
-                                    <h5>Vintage Stripe Jumper</h5>
-                                    <span class="product-price">$49.00</span>
-                                </section>
-                            </a>
-                        </figure>
-                    </li>
-
-
-                    <!-- Product #5 -->
-                    <li>
-                        <figure class="product">
-                            <div class="mediaholder">
-                                <a href="single-product-page.html">
-                                    <img alt="" src="{% static 'images/shop_item_05.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt="" src="{% static 'images/shop_item_05_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="singlee-product-page.html">
-                                <section>
-                                    <span class="product-category">Accessories</span>
-                                    <h5>Vintage Sunglasses</h5>
-                                    <span class="product-price">$29.00</span>
-                                </section>
-                            </a>
-                        </figure>
-                    </li>
-
-
-                    <!-- Product #6 -->
-                    <li>
-                        <figure class="product">
-                            <div class="mediaholder">
-                                <a href="single-product-page.html">
-                                    <img alt="" src="{% static 'images/shop_item_06.jpg' %}"/>
-                                    <div class="cover">
-                                        <img alt="" src="{% static 'images/shop_item_06_hover.jpg' %}"/>
-                                    </div>
-                                </a>
-                                <a href="#" class="product-button"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
-                            </div>
-
-                            <a href="single-product-page.html">
-                                <section>
-                                    <span class="product-category">Shirts</span>
-                                    <h5>Solid Blue Polo Shirt</h5>
-                                    <span class="product-price">$29.00</span>
-                                </section>
-                            </a>
-                        </figure>
-                    </li>
-
+                        
+                    {% endfor %}
                 </ul>
                 <div class="clearfix"></div>
 
@@ -250,13 +143,14 @@
     </div>
 
 </div>
+{% endif %}
 {% endblock %}
 
 {% block parallax_banner %}
 <div class="parallax-banner fullwidth-element"  data-background="#000" data-opacity="0.45" data-height="200">
     <img src="{% static 'images/parallax.jpg' %}" alt="" />
     <div class="parallax-overlay"></div>
-    <div class="parallax-title">End of season sale <span>Up to 35% off Women’s Denim</span></div>
+    <div class="parallax-title">###<span>HANDMAKER.TOP</span></div>
 </div>
 {% endblock %}
 
@@ -265,9 +159,8 @@
 
     <!-- Best Sellers -->
     <div class="one-third column">
-
         <!-- Headline -->
-        <h3 class="headline">Best Sellers</h3>
+        <h3 class="headline">Распродажа</h3>
         <span class="line margin-bottom-0"></span>
         <div class="clearfix"></div>
 
@@ -298,7 +191,7 @@
     <!-- Top Rated -->
     <div class="one-third column">
         <!-- Headline -->
-        <h3 class="headline">Top Rated</h3>
+        <h3 class="headline">Лучшие магазины</h3>
         <span class="line margin-bottom-0"></span>
         <div class="clearfix"></div>
 
@@ -343,7 +236,7 @@
     <!-- Weekly Sales -->
     <div class="one-third column">
         <!-- Headline -->
-        <h3 class="headline">Weekly Sales</h3>
+        <h3 class="headline">Новые товары</h3>
         <span class="line margin-bottom-0"></span>
         <div class="clearfix"></div>
 
@@ -373,6 +266,7 @@
 {% endblock %}
 
 {% block lastest_articles %}
+{% if recent_posts %}
 <div class="container" >
     <!-- Headline -->
     <div class="sixteen columns" >
@@ -380,23 +274,43 @@
         <span class="line margin-bottom-30"></span>
     </div>
 
-    <!-- Post #1 -->
+    {% for blog_post in recent_posts %}
     <div class="four columns">
         <article class="from-the-blog">
-
+            {% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %}
+            {% block blog_post_list_post_featured_image %}
             <figure class="from-the-blog-image">
-                <a href="blog-single-post.html"><img src="{% static 'images/from_the_blog_01.jpg' %}" alt="" /></a>
+                <a href="{{ blog_post.get_absolute_url }}">
+                    <img class="img-thumbnail pull-left" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 400 300 %}" alt="" />
+                </a>
                 <div class="hover-icon"></div>
             </figure>
-
+            {% endblock %}
+            {% endif %}
             <section class="from-the-blog-content">
-                <a href="blog-single-post.html"><h5>Amazon Raises Threshold for Free Shipping</h5></a>
-                <i>By Vasterad on May 31, 2014</i>
-                <span>Pellentesque ultricies vehicula eleifend. Aenean eu nunc semper faucibus sapien viverra.</span>
-                <a href="blog-single-post.html" class="button gray">Read More</a>
+                {% block blog_post_list_post_title %}
+                    <a href="{{ blog_post.get_absolute_url }}"><h5>{{ blog_post.title|title }}</h5></a>
+                {% endblock %}
+                {% block blog_post_list_post_metainfo %}
+                    {% with blog_post.user as author %}
+                    <i>{% trans "Posted by" %}: <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>,  
+                    {% blocktrans with sometime=blog_post.publish_date|date %}{{ sometime }}{% endblocktrans %}
+                    </i>
+                    {% endwith %}
+                {% endblock %}
+                {% block blog_post_list_post_content %}
+                {% if blog_post.preview_content %}
+                    {{ blog_post.preview_content|truncatewords_html:45 }}
+                {% else %}
+                    {{ blog_post.description_from_content|safe|truncatewords_html:45 }}
+                {% endif %}
+                {% endblock %}
+                <a href="{{ blog_post.get_absolute_url }}" class="button gray">{% trans "read more" %}</a>
             </section>
-
         </article>
     </div>
+        
+    {% endfor %}
 </div>
+{% endif %}
 {% endblock %}
