--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 
-{% block main_containter %}ca
+{% block main_containter %}
 
 <div class="container">
 {% if child_categories %}
