--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -160,28 +160,22 @@
     <!-- Best Sellers -->
     <div class="one-third column">
         <!-- Headline -->
-        <h3 class="headline">Распродажа</h3>
+        <h3 class="headline">Самые популярные</h3>
         <span class="line margin-bottom-0"></span>
         <div class="clearfix"></div>
 
 
         <ul class="product-list">
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_01.jpg' %}" alt="" />
-                <div class="product-list-desc">Canvas Backpack <i>$59.00</i></div>
+            {% for product in most_popular %}
+            <li><a href="{{product.get_absolute_url}}">
+                {% if product.image %}
+                <img src="{{ MEDIA_URL }}{% thumbnail product.image 80 80 %}" alt="" />
+                {% else %}
+                <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image-80.jpg' 80 80 %}">
+                {% endif %}
+                <div class="product-list-desc">{{product.title|title}} <i> {{ product.price|rub_currency }}</i></div>
             </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_02.jpg' %}" alt="" />
-                <div class="product-list-desc">Long Sleeve Shirt <i>$29.00</i></div>
-            </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_03.jpg' %}" alt="" />
-                <div class="product-list-desc">Tommy Hilfiger Shirt Beat <i>$89.00</i></div>
-            </a></li>
-
+            {% endfor %}
             <li><div class="clearfix"></div></li>
 
         </ul>
@@ -197,37 +191,21 @@
 
 
         <ul class="product-list top-rated">
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_04.jpg' %}" alt="" />
-                <div class="product-list-desc with-rating">Brogue Boots in Leather <i>$99.00</i>
+        {% for product in best_product %}
+            <li><a href="{{product.get_absolute_url}}">
+                {% if product.image %}
+                <img src="{{ MEDIA_URL }}{% thumbnail product.image 80 80 %}" alt="" />
+                {% else %}
+                <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image-80.jpg' 80 80 %}">
+                {% endif %}
+                <div class="product-list-desc with-rating">{{product.title|title}} <i> {{ product.price|rub_currency }} </i>
                     <div class="rating five-stars">
                         <div class="star-rating"></div>
                         <div class="star-bg"></div>
                     </div>
                 </div>
             </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_05.jpg' %}" alt="" />
-                <div class="product-list-desc with-rating">Slim Jeans With Blue Tint <i>$79.00</i>
-                    <div class="rating four-stars">
-                        <div class="star-rating"></div>
-                        <div class="star-bg"></div>
-                    </div>
-                </div>
-            </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_06.jpg' %}" alt="" />
-                <div class="product-list-desc with-rating">New Look Fairisle Scarf <i>$19.00</i>
-                    <div class="rating three-stars">
-                        <div class="star-rating"></div>
-                        <div class="star-bg"></div>
-                    </div>
-                </div>
-            </a></li>
-
+        {% endfor %}
             <li><div class="clearfix"></div></li>
 
         </ul>
@@ -236,27 +214,26 @@
     <!-- Weekly Sales -->
     <div class="one-third column">
         <!-- Headline -->
-        <h3 class="headline">Новые товары</h3>
+        <h3 class="headline">Распродажа</h3>
         <span class="line margin-bottom-0"></span>
         <div class="clearfix"></div>
 
 
         <ul class="product-list discount">
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_07.jpg' %}" alt="" />
-                <div class="product-list-desc">Short Sleeve Polo Shirt <i>$29.00<b>$19.00</b></i></div>
+        {% for product in sale_product %}
+            <li><a href="{{product.get_absolute_url}}">
+                {% if product.image %}
+                <img src="{{ MEDIA_URL }}{% thumbnail product.image 80 80 %}" alt="" />
+                {% else %}
+                <img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image-80.jpg' 80 80 %}">
+                {% endif %}
+                <div class="product-list-desc">{{product.title|title}} <i>
+                {% if product.on_custom_sale %}
+                {{ product.unit_price|rub_currency }}
+                {% endif %}
+                <b>{{ product.price|rub_currency }}</b></i></div>
             </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_08.jpg' %}" alt="" />
-                <div class="product-list-desc">Long Sleeve Shirt <i>$99.00<b>$79.00</b></i></div>
-            </a></li>
-
-            <li><a href="#">
-                <img src="{% static 'images/small_product_list_09.jpg' %}" alt="" />
-                <div class="product-list-desc">Tommy Hilfiger Shirt Beat <i>$499.00<b>$399.00</b></i></div>
-            </a></li>
+        {% endfor %}
 
             <li><div class="clearfix"></div></li>
         </ul>
