--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -155,6 +155,7 @@
 {% endblock %}
 
 {% block product_list %}
+{% if most_popular and best_product and sale_product %}
 <div class="container margin-bottom-25">
 
     <!-- Best Sellers -->
@@ -240,6 +241,7 @@
     </div>
 </div>
 <div class="clearfix"></div>
+{% endif %}
 {% endblock %}
 
 {% block lastest_articles %}
