--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -11,14 +11,15 @@
 {% block main_containter %}
 
 <div class="container">
-{% if child_categories %}
+{% if sub_categories %}
 <!-- Filters -->
 	<div class="sixteen columns">
 		<div id="filters" class="filters-dropdown headline"><span></span>
 			<ul class="option-set" data-option-key="filter">
-			<li><a href="#filter" class="selected" data-filter="*">Все</a></li>
-			{% for category in child_categories %}
-				<li><a href="#filter" data-filter=".{{category.title|hard_trim}}">{{category.title|title}}</a></li>
+			{% for category in sub_categories %}
+				<li><a href="#filter" 
+				{% if forloop.first %}class="selected"{% endif %} 
+				data-filter=".{{category.title|hard_trim}}">{{category.title|title}}</a></li>
 			{% endfor %}
 			</ul>
 		</div>
@@ -26,9 +27,9 @@
 	<div class="clearfix"></div>
 
 	<div id="portfolio-wrapper">
-	{% for category in true_child_categories %}
+	{% for category in sub_child_categories %}
 		<!-- Portfolio Item -->
-		<div class="four columns portfolio-item {{category.title|hard_trim}}">
+		<div class="four columns portfolio-item {{category.parent.title|hard_trim}}">
 			<figure>
 				<div class="portfolio-holder">
 					<a href="{{ category.get_absolute_url }}
@@ -60,9 +61,9 @@
 					<section class="item-description">
 						<span>
 						{% if category.parent.parent.title and category.parent.parent.title != 'Каталог'  %}
-							{{ category.parent.parent.title }}
+							{{ category.parent.parent.title }} <i class="fa fa-caret-right"></i>
 						{% endif %}
-						{{ category.parent.title }}</span>
+						{{ category.parent.title|truncatechars:25 }}</span>
 						<h5>{{ category.title|truncatechars:25 }}</h5>
 					</section>
 				</a>
