--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -11,7 +11,7 @@
 {% block main_containter %}
 
 <div class="container">
-{% if sub_child_categories %}
+{% if sub_categories %}
 <!-- Filters -->
 	<div class="sixteen columns">
 		<div id="filters" class="filters-dropdown headline"><span></span>
