--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -1,3 +1,53 @@
+.product h5, .product span {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.product span {
+    display: block;
+}
+@media only screen and (max-width: 767px) {
+	.custom_column {
+		width: 144px!important;
+	    margin-right: 3px!important;
+	    margin-left: 3px!important;
+	}
+	.product h5 {
+		line-height: 26px!important;
+		overflow: hidden;
+		font-size: 15px;
+		text-overflow: ellipsis;
+	    white-space: nowrap;
+	}
+	.product span {
+		text-overflow: ellipsis;
+	    white-space: nowrap;
+	    overflow: hidden;
+	    display: block;
+	}
+	.product section {
+		padding: 3px 0 3px 0;
+		/*text-align: left;*/
+    	padding-left: 5px;
+	}
+	.product .product-category {
+		word-break: break-word;
+		font-weight: 600;
+		padding: 0px 6px 2px 0px;
+	}
+	.product .product-price {
+		padding: 0px 6px 6px 0px;
+	}
+}
+@media only screen and (max-width: 767px) and (min-width: 480px) {
+	.custom_column {
+		width: 200px!important;
+	    margin-right: 5px!important;
+	    margin-left: 5px!important;
+	}
+}
 .selectric {
 	min-width: 240px;
 }
