--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -13,7 +13,7 @@
 <div class="container">
 {% if sub_categories %}
 <!-- Filters -->
-	<div class="sixteen columns">
+	<!-- <div class="sixteen columns">
 		<div id="filters" class="filters-dropdown headline"><span></span>
 			<ul class="option-set" data-option-key="filter">
 			{% if no_child %}
@@ -27,7 +27,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="clearfix"></div>
+	<div class="clearfix"></div> -->
 
 	<div id="portfolio-wrapper">
 	{% for category in sub_child_categories %}
