--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="{% static "css/green.css" %}" id="colors">
 <link rel="stylesheet" href="{% static "css/custom.css" %}" id="colors">
 <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js' %}"></script>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js' %}"></script>
 <![endif]-->
 {% block extra_css %}
 {% endblock %}
@@ -43,25 +43,30 @@
 
 {% block top_bar %}
 <div id="top-bar">
-    <div class="container">
+	<div class="container">
 
-        <!-- Top Bar Menu -->
-        <div class="ten columns">
-            <ul class="top-bar-menu">
-                <li><i class="fa fa-envelope"></i> <a href="mailto:info@handmaker.top">info@handmaker.top</a></li>
-            </ul>
-        </div>
-        <!-- Social Icons -->
-        <div class="six columns">
-            <ul class="social-icons">
-                <li>
-                	<a class="facebook" href="https://www.facebook.com/groups/803193513100186?ref=bookmarks"><i class="icon-facebook"></i></a>
-                </li>
-                <li><a class="instagram" href="https://www.instagram.com/handmaker.top/"><i class="icon-instagram"></i></a></li>
-            </ul>
-        </div>
-
-    </div>
+		<!-- Top Bar Menu -->
+		<!-- <div class="four columns">
+			<ul class="top-bar-menu">
+				<li><i class="fa fa-envelope"></i> <a href="mailto:info@handmaker.top">info@handmaker.top</a></li>
+			</ul>
+		</div> -->
+		<div class="sixteen columns">
+			{% block navbar_dropdown_menu %}
+				{% page_menu "pages/menus/dropdown.html" %}
+			{% endblock%}
+		</div>
+		<!-- Social Icons -->
+		<!-- <div class="four columns">
+			{# {% block navbar_search_form %}{% search_form "all" %}{% endblock %} #}
+			<ul class="social-icons">
+				<li>
+					<a class="facebook" href="https://www.facebook.com/groups/803193513100186?ref=bookmarks"><i class="icon-facebook"></i></a>
+				</li>
+				<li><a class="instagram" href="https://www.instagram.com/handmaker.top/"><i class="icon-instagram"></i></a></li>
+			</ul>
+		</div> -->
+	</div>
 </div>
 
 <div class="clearfix"></div>
@@ -69,53 +74,81 @@
 
 {% block header %}
 <div class="container">
+<div class="four columns">
+	<div id="logo">
+		<a href="{% url 'true_index' %}"><img src="{% static 'images/logo/hm3.png' %}" alt="logo" /></a>
+	</div>
+</div>
+<div class="twelve columns" id="_top_buttons">
+	<div style="float:right; display: none">
+		{% if request.user.is_authenticated %}
+			<a href="{% url 'admin:index' %}">Моя панель управления</a>
+			<a href="{% url 'profile' request.user.username %}">Мой магазин</a>
+			<a href="{% url 'logout' %}?next={{ request.path }}">Выйти</a>
+		{% else %}
+			<a href="{% if request.user.is_authenticated %}/admin/blog/blogpost/add/{% else %}
+				{% url "login" %}?next={% url 'promote_user' %}{% endif %}">Создать магазин</a>
+			<a href="{% if request.user.is_authenticated %}/admin/shop/product/add/{% else %}
+				{% url "login" %}?next={% url 'promote_user' %}{% endif %}">Создать заказ</a>
+			<a href="{% url "login" %}?next={{ request.path }}">Войти</a>
+		{% endif %}
+	</div>
+</div>
+<div class="twelve columns columns margin-top-10">
+	<div style="float:right;">
+		<a href="{% if request.user.is_authenticated %}/admin/blog/blogpost/add/{% else %}
+			{% url "login" %}?next={% url 'promote_user' %}{% endif %}" class="button dark">Создать магазин</a>
+		<a href="{% if request.user.is_authenticated %}/admin/shop/product/add/{% else %}
+			{% url "login" %}?next={% url 'promote_user' %}{% endif %}" class="button dark">Создать заказ</a>
+		<a href="{% url "login" %}?next={{ request.path }}" class="button dark">Войти</a>
+	</div>
+</div>
+
+	<!-- Logo -->
+	<!-- <div class="four columns">
+		<div style="padding-top: 15px;">
+			<h1><a href="/"><img src="{% static 'images/logo/_handmaker.png' %}" alt="logo" /></a></h1>
+		</div>
+	</div> -->
 
 
-    <!-- Logo -->
-    <div class="four columns">
-        <div style="padding-top: 15px;">
-            <h1><a href="/"><img src="{% static 'images/logo/_handmaker.png' %}" alt="logo" /></a></h1>
-        </div>
-    </div>
+	<!-- Additional Menu -->
+	<!-- <div class="twelve columns">
+		<div id="additional-menu">
+			<ul>
+			{% if request.user.is_authenticated %}
+				<li><a href="{% url 'admin:index' %}">Моя панель управления</a></li>
+				<li><a href="{% url 'profile' request.user.username %}">Мой профиль</a></li>
+					<li><a href="{% url 'logout' %}?next={{ request.path }}">Выйти</a></li>
+			{% else %}
+				<li><a href="{% url "login" %}?next={{ request.path }}">Войти</a></li>
+				<li><a href="{% url "signup" %}?next={% url 'promote_user' %}">Регистрация</a></li>
+			{% endif %}
+			</ul>
+		</div>
+	</div> -->
 
-
-    <!-- Additional Menu -->
-    <div class="twelve columns">
-        <div id="additional-menu">
-            <ul>
-            {% if request.user.is_authenticated %}
-                <li><a href="{% url 'admin:index' %}">Моя панель управления</a></li>
-                <li><a href="{% url 'profile' request.user.username %}">Мой профиль</a></li>
-				<li><a href="{% url 'logout' %}?next={{ request.path }}">Выйти</a></li>
-            {% else %}
-                <li><a href="{% url "login" %}?next={{ request.path }}">Войти</a></li>
-                <li><a href="{% url "signup" %}?next={% url 'promote_user' %}">Регистрация</a></li>
-            {% endif %}
-            </ul>
-        </div>
-    </div>
-
-    <div class="twelve columns">
-    <p style="float:right">
-        <a href="
-        {% if request.user.is_authenticated %}
-            /admin/blog/blogpost/add/
-        {% else %}
-            {% url "login" %}?next={% url 'promote_user' %}
-        {% endif %}
-        " class="button gray">Написать статью</a>
-        <a href="
-        {% if request.user.is_authenticated %}
-            /admin/shop/product/add/
-        {% else %}
-            {% url "login" %}?next={% url 'promote_user' %}
-        {% endif %}
-        " class="button gray">Добавить новый товар</a>
-    </p>
-    </div>
-    <div class="twelve columns">
-        {% block navbar_search_form %}{% search_form "all" %}{% endblock %}
-    </div>
+	<!-- <div class="twelve columns">
+	<p style="float:right">
+		<a href="
+		{% if request.user.is_authenticated %}
+			/admin/blog/blogpost/add/
+		{% else %}
+			{% url "login" %}?next={% url 'promote_user' %}
+		{% endif %}
+		" class="button gray">Создать магазин</a>
+		<a href="
+		{% if request.user.is_authenticated %}
+			/admin/shop/product/add/
+		{% else %}
+			{% url "login" %}?next={% url 'promote_user' %}
+		{% endif %}
+		" class="button gray">Создать заказ</a>
+	</p>
+	</div>
+	<div class="twelve columns">
+		
+	</div> -->
 
 </div>
 {% endblock %}
@@ -123,9 +156,7 @@
 {% block navigation %}
 <div class="container">
 <div class="sixteen columns">
-{% block navbar_dropdown_menu %}
-    {% page_menu "pages/menus/dropdown.html" %}
-{% endblock%}
+
 </div>
 </div>
 {% endblock %}
@@ -155,12 +186,12 @@
 		{% spaceless %}
 		<nav id="breadcrumbs">
 			<ul>
-            {% block breadcumbs_menu %}
-		    {% page_menu "pages/menus/breadcrumb.html" %}
-            {% endblock %}
+			{% block breadcumbs_menu %}
+			{% page_menu "pages/menus/breadcrumb.html" %}
+			{% endblock %}
 			{% block breadcrumb_element %}
 			{% endblock %}
-		    </ul>
+			</ul>
 		</nav>
 		{% endspaceless %}
 	</div>
@@ -172,21 +203,21 @@
 {% endblock %}
 
 {% block main_containter %}
-    <div class="container">
-        {% block sidebar %}
-        {% endblock %}
+	<div class="container">
+		{% block sidebar %}
+		{% endblock %}
 
-        {% block main %}
-        {% endblock %}
-    </div>
-    <div class="container">
-        {% block product_info %}
-        {% endblock %}
-    </div>
-    <div class="container margin-top-10">
-        {% block related_products %}
-        {% endblock %}
-    </div>
+		{% block main %}
+		{% endblock %}
+	</div>
+	<div class="container">
+		{% block product_info %}
+		{% endblock %}
+	</div>
+	<div class="container margin-top-10">
+		{% block related_products %}
+		{% endblock %}
+	</div>
 
 {% endblock %}
 
@@ -210,56 +241,56 @@
 <div class="margin-top-50"></div>
 <div id="footer">
 
-    <!-- Container -->
-    <div class="container">
+	<!-- Container -->
+	<div class="container">
 
-        <div class="four columns">
-            <img src="{% static 'images/logo/_handmaker.png' %}" alt="" class=""/>
-            <p class="margin-top-15">Добавить небольшой текст</p>
-        </div>
+		<!-- <div class="four columns">
+			<img src="{% static 'images/logo/_handmaker.png' %}" alt="" class=""/>
+			<p class="margin-top-15">Добавить небольшой текст</p>
+		</div> -->
 
-        <div class="four columns">
+		<div class="four columns">
 
-            <!-- Headline -->
-            <h3 class="headline footer">Каталог</h3>
-            <span class="line"></span>
-            <div class="clearfix"></div>
+			<!-- Headline -->
+			<h3 class="headline footer">Каталог</h3>
+			<span class="line"></span>
+			<div class="clearfix"></div>
 
-            <ul class="footer-links">
-                <li><a href="#">Аксессуары</a></li>
-                <li><a href="#">Интерьер</a></li>
-                <li><a href="#">Косметика ручной работы</a></li>
-                <li><a href="#">Куклы и игрушки</a></li>
-                <li><a href="#">Одежда</a></li>
-            </ul>
+			<ul class="footer-links">
+				<li><a href="#">Аксессуары</a></li>
+				<li><a href="#">Интерьер</a></li>
+				<li><a href="#">Косметика ручной работы</a></li>
+				<li><a href="#">Куклы и игрушки</a></li>
+				<li><a href="#">Одежда</a></li>
+			</ul>
 
-        </div>
+		</div>
 
-        <div class="four columns">
+		<div class="four columns">
 
-            <!-- Headline -->
-            <h3 class="headline footer">Личный кабинет</h3>
-            <span class="line"></span>
-            <div class="clearfix"></div>
+			<!-- Headline -->
+			<h3 class="headline footer">Личный кабинет</h3>
+			<span class="line"></span>
+			<div class="clearfix"></div>
 
-            <ul class="footer-links">
-                <li><a href="#">Профиль</a></li>
-                <li><a href="#">Мой блог</a></li>
-                <li><a href="#">Мой магазин</a></li>
-            </ul>
+			<ul class="footer-links">
+				<li><a href="#">Профиль</a></li>
+				<li><a href="#">Мой блог</a></li>
+				<li><a href="#">Мой магазин</a></li>
+			</ul>
 
-        </div>
+		</div>
 
-        <div class="four columns">
-            <!-- Headline -->
-            <h3 class="headline footer">Контакты</h3>
-            <span class="line"></span>
-            <div class="clearfix"></div>
-            <p>Номер телефона, адрес и т.д.</p>
-        </div>
+		<div class="four columns">
+			<!-- Headline -->
+			<h3 class="headline footer">Контакты</h3>
+			<span class="line"></span>
+			<div class="clearfix"></div>
+			<p>Номер телефона, адрес и т.д.</p>
+		</div>
 
-    </div>
-    <!-- Container / End -->
+	</div>
+	<!-- Container / End -->
 
 </div>
 <!-- Footer / End -->
@@ -267,15 +298,15 @@
 <!-- Footer Bottom / Start -->
 <div id="footer-bottom">
 
-    <!-- Container -->
-    <div class="container">
+	<!-- Container -->
+	<div class="container">
 
-        <div class="eight columns"><a href="/">handmaker.top</a></div>
-        <div class="eight columns">
-        </div>
+		<div class="eight columns"><a href="/">handmaker.top</a></div>
+		<div class="eight columns">
+		</div>
 
-    </div>
-    <!-- Container / End -->
+	</div>
+	<!-- Container / End -->
 
 </div>
 <!-- Footer Bottom / End -->
